--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.33",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2",
+    "@types/redux-form": "^8.3.1",
     "axios": "^0.21.1",
+    "classnames": "^2.2.6",
     "final-form": "^4.20.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -20,6 +26,7 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "thunk": "0.0.1",
+    "typescript": "^4.2.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
